--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
 
 
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="src/script.js"></script>
 </body>
 </html>
